--- a/Navbar.html
+++ b/Navbar.html
@@ -13,6 +13,7 @@
             <li>Home</li>
             <li>About</li>
             <li>Contact</li>
+            <li>Services</li>
         </ul>
     </div>
 </body>
